fix contrast issue

--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,10 @@ h6 {
 }
 
 .container {
-  max-width: 1080px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 0 1rem;
+  background-color: white;
 }
 
 img {
@@ -42,6 +43,9 @@ img {
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  background-color:  grey;
+  color: white;
+  padding: 2rem;
 }
 
 form input,
